[package]
name = "unseen"
version = "0.1.0"
authors = ["Kunal Bagaria <kb24x7@gmail.com>"]
edition = "2021"
description = "A CLI tool to hide an app from the Dock on macOS"
readme = "README.md"
license = "MIT"
repository = "https://github.com/KunalBagaria/unseen"

[[bin]]
name = "unseen"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.11", features = ["derive"] }
libc = "0.2"